Bug/cv2 2736 - fix panel's gap between items in designer (#2757)
* Fix lint

* Work for #2736: fix panel's gap between items

* Add vrt test

--- a/packages/survey-creator-core/src/components/question.scss
+++ b/packages/survey-creator-core/src/components/question.scss
@@ -405,3 +405,23 @@ svc-question,
     background-color: $background-dim;
   }
 }
+
+.sd-panel {
+  .svc-row {
+    margin-top: calcSize(1);
+  }
+  .svc-row:first-child {
+    margin-top: 0;
+  }
+  .svc-row .sd-row {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .svc-row.svc-row--ghost {
+    margin-top: calcSize(1);
+    margin-bottom: calcSize(1.5);
+    .sv-drag-drop-ghost {
+      top: 0;
+    }
+  }
+}
